--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         .course:hover, .article:hover {
             transform: scale(1.02);
         }
+        
+        /* استایل برای مقاله جدید */
+        .article-new {
+            border-right: 4px solid #ff4d4d; /* تغییر رنگ برای برجسته سازی */
+            background-color: #fff0f0; /* پس زمینه روشن‌تر */
+        }
 
         .contact {
             margin-top: 1rem;
@@ -159,12 +165,20 @@
     <div class="container" id="articles">
         <h2>آخرین مقالات</h2>
         <div class="articles">
+            <!-- **تغییر اعمال شد: آیتم جدید مقاله تندخوانی اضافه شد** -->
+            <div class="article article-new">
+                <h3><a href="article-speed_reading.html">تندخوانی؛ رمز مطالعه مؤثر و سریعتر در عصر</a></h3>
+                <p>در این مقاله به تعریف تندخوانی، اشتباهات رایج و روش‌های علمی افزایش سرعت مطالعه می‌پردازیم...</p>
+            </div>
+
+            <!-- مقاله تندخوانی قبلی (که ممکن است تکراری باشد) حذف یا به‌روز شده است. -->
             <div class="article">
-                <h3>آموزش تندخوانی با پیشرفته ترین تمرین‌های سال 2025</h3>
+                <h3><a href="#">آموزش تندخوانی با پیشرفته ترین تمرین‌های سال 2025</a></h3>
                 <p>در این مقاله به نکات مهمی درباره تند خوانی (UX/UI) </p>
             </div>
+            
             <div class="article">
-                <h3>چگونه مسیر یادگیری  خود را پیدا کنیم؟</h3>
+                <h3><a href="#">چگونه مسیر یادگیری  خود را پیدا کنیم؟</a></h3>
                 <p>اگر تازه وارد دنیای کنکور شده‌اید، این مقاله به شما مسیر درست یادگیری دروس را نشان می‌دهد...</p>
             </div>
         </div>
@@ -186,7 +200,3 @@
     </footer>
 </body>
 </html>
-
-
-
-
