--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <header>
-        <h1>رشدانه</h1>
+        <h1>بالند</h1>
         <p>آموزش ، مقالات ، مسیر رشد شخصی و کاوش در دنیای زیست شناسی</p>
     </header>
 
@@ -165,20 +165,32 @@
     <div class="container" id="articles">
         <h2>آخرین مقالات</h2>
         <div class="articles">
-            <!-- **تغییر اعمال شد: آیتم جدید مقاله تندخوانی اضافه شد** -->
+            <!-- **مقاله جدید تندخوانی با ساختار کامل HTML (گام نهایی)** -->
             <div class="article article-new">
-                <h3><a href="article-speed_reading.html">تندخوانی؛ رمز مطالعه مؤثر و سریعتر در عصر</a></h3>
-                <p>در این مقاله به تعریف تندخوانی، اشتباهات رایج و روش‌های علمی افزایش سرعت مطالعه می‌پردازیم...</p>
+                <h3><a href="article-new_speed_reading.html">⚡️ رازهای ناگفته‌ای که ساعت مطالعه شما را دو برابر می‌کند! چطور در ایران با چالش‌های مطالعه بجنگیم؟</a></h3>
+                <p>در این مقاله، به بررسی روش‌های مؤثر برای افزایش دقت و سرعت مطالعه می‌پردازیم. این استراتژی‌ها شامل:</p>
+                <ol>
+                    <li><strong>قانون لقمه سخت:</strong> به کارگیری تمرینات مداوم برای بهبود تمرکز.</li>
+                    <li><strong>Power Nap ۲۰ دقیقه‌ای:</strong> اشاره به تحقیقات هاروارد در مورد خواب کوتاه.</li>
+                    <li><strong>Airplane Mode برای موبایل:</strong> محدود کردن عوامل حواس‌پرتی.</li>
+                    <li><strong>تعیین زمان مطالعه مشخص:</strong> برای تمرکز بیشتر.</li>
+                    <li><strong>ایجاد محیط مطالعه آرام:</strong> کاهش صداهای مزاحم.</li>
+                    <li><strong>استفاده از تکنیک Pomodoro:</strong> کار کردن در بازه‌های زمانی کوتاه.</li>
+                    <li><strong>یادداشت‌برداری مؤثر:</strong> استفاده از روش‌های خلاصه‌نویسی.</li>
+                </ol>
+                <p>با استفاده از این روش‌ها، شما می‌توانید به طور چشمگیری بهبود در فرآیند مطالعه خود را تجربه کنید. این راهکارها با هدف ایجاد یک مسیر رشد پایدار توسط مجموعه <strong>بالَند</strong> و با تخصص <strong>سید امیرعلی سیدی‌زاده</strong> طراحی شده‌اند.</p>
             </div>
-
-            <!-- مقاله تندخوانی قبلی (که ممکن است تکراری باشد) حذف یا به‌روز شده است. -->
+            
+            <!-- **حذف یا به‌روزرسانی مقاله قدیمی تکراری** -->
+            <!-- 
             <div class="article">
                 <h3><a href="#">آموزش تندخوانی با پیشرفته ترین تمرین‌های سال 2025</a></h3>
                 <p>در این مقاله به نکات مهمی درباره تند خوانی (UX/UI) </p>
             </div>
+            -->
             
             <div class="article">
-                <h3><a href="#">چگونه مسیر یادگیری  خود را پیدا کنیم؟</a></h3>
+                <h3><a href="#">چگونه مسیر یادگیری خود را پیدا کنیم؟</a></h3>
                 <p>اگر تازه وارد دنیای کنکور شده‌اید، این مقاله به شما مسیر درست یادگیری دروس را نشان می‌دهد...</p>
             </div>
         </div>
@@ -189,7 +201,6 @@
         <div class="contact">
             <p>📧 ایمیل: <a href="mailto:amiralisidi13866831@gmail.com">amiralisidi13866831@gmail.com</a></p>
             <p>📱 شماره تماس (واتساپ/سایر): <a href="tel:09944974847">۰۹۹۴۴۹۷۴۸۴۷</a></p>
-            <!-- **لینک ایتا بر اساس درخواست دقیق کاربر:** -->
             <p>🔗 ایتا: <a href="https://search.eitaa.com/?url=https://eitaa.com/siteherfeyman" target="_blank">کانال تخصصی من در ایتا</a></p>
             <p class="note">شماره بالا به عنوان شماره تماس اصلی نیز قابل استفاده است.</p>
         </div>
